webapp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluebox
  labels:
    app: bluebox-flight-recorder
